# goldilocks

./: .gitignore  Cargo.toml  Readme.md  criterion.rs  cspell.json
bench/: Cargo.toml  analysis.ipynb
bench/src/: main.rs
benches/: analysis.ipynb  criterion.rs  ntt.rs  transpose.rs
benches/.ipynb_checkpoints/: analysis-checkpoint.ipynb
benches/results/m1-max/copy-ro-1x1/: run1.csv  run2.csv
benches/results/m1-max/copy-wo-1x1/: run1.csv
benches/results/m1-max/copy-wo-1x2/: run1.csv
benches/results/m1-max/copy-wo-2x3/: run1.csv
benches/results/m1-max/gw18/: run1.csv
benches/results/m1-max/libtrans.skip/: run.2.csv  run.ab.csv
benches/results/m1-max/ntt-naive/: run1.csv
benches/results/m1-max/ntt-old/: run1.csv
benches/results/m1-max/old-1x1/: run1.csv
benches/results/m1-max/old-2x1/: run1.csv
benches/results/m1-max/recursive/: run1.csv  run2.csv  run3.csv  run4.csv
benches/results/m1-max/small/: run1.csv
benches/results/m1-max/square/: run1.csv  run2.csv  run3.csv
benches/results/m1-max/told.skip/: run1.csv
benches/results/m1-max/transpose/: run1.csv  run5.csv
benches/results/m1-max/twiddle.skip/: run1.csv  run2.csv
merkle/: Cargo.toml
merkle/benches/: criterion.rs
merkle/src/: lib.rs
merkle/src/k12/: aarch64.rs  generic.rs  mod.rs  xkcp.rs
ntt/: Cargo.toml  Readme.md
ntt/benches/: ntt.rs
ntt/proptest-regressions/field/algo/: mod.txt
ntt/shader/: poseidon.wgsl
ntt/src/: convolve.rs  divisors.rs  lib.rs  utils.rs
ntt/src/algo/aarch64/: mod.rs
ntt/src/field/: rand.rs
ntt/src/field/algo/: mod.rs
ntt/src/gpu/: mod.rs
ntt/src/ntt/: cooley_tukey.rs  good_thomas.rs  mod.rs  naive.rs  winograd.rs
ntt/src/ntt/gpu/: goldilocks.wgsl  mod.rs  ntt.wgsl  utils.wgsl
ntt/src/permute/: copy.rs  gcd.rs  gw18.rs  mod.rs  permutation.rs  square.rs
pcs/: Cargo.toml  Readme.md
pcs/benches/: criterion.rs
pcs/proptest-regressions/k12/: generic.txt
pcs/src/: lib.rs  pow.rs
pcs/src/k12/: aarch64.asm  aarch64.rs  generic.rs  mod.rs  xkcp.rs
proptest-regressions/algo/: aarch64.txt  generic.txt
proptest-regressions/ntt/: mod.txt  radix_sqrt.txt  recursive.txt  small.txt
proptest-regressions/transpose/: permute.txt  square.txt
shader/: add.wgsl  goldilocks.wgsl  mul.wgsl
src/: convolve.rs  divisors.rs  field.rs  lib.rs  rand.rs  utils.rs
src/algo/: aarch64.rs  avx512.rs  generic.rs  mod.rs  utils.rs
src/algo/aarch64/: k12.rs  transpose.rs
src/field/: mod.rs
src/field/algo/: aarch64.rs  generic.rs  mod.rs
src/ntt/: bit_reverse.rs  cooley_tukey.rs  good_thomas.rs  mod.rs  naive.rs  rader.rs  radix_sqrt.rs  recursive.rs  small.rs  transpose.rs
src/ntt2/: cooley_tukey.rs  matrix.rs  mod.rs  naive.rs  small.rs  vector.rs
src/ntt_old/: mod.rs  radix_sqrt.rs  recursive.rs  small.rs  transpose.rs
src/ntt_old/gpu/: mod.rs
src/permute/: copy.rs  cycles.rs  cyclic.rs  gcd.rs  gw18.rs  inner_block.rs  mod.rs  outer_block.rs  square.rs
src/transpose/: cyclic.rs  mod.rs  permute.rs  square.rs
