[package]
name = "goldilocks-ntt"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
homepage = "https://github.com/recmo/goldilocks-ntt"
repository = "https://github.com/recmo/goldilocks-ntt"
description = "A library for fast NTTs over the Goldilocks prime field"
keywords = ["ntt", "goldilocks", "prime", "field"]
categories = ["mathematics"]
readme = "Readme.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = [
    "merkle",
]

[features]
default = []
bench = ["dep:criterion", "dep:winter-math", "rand"]

[[bench]]
name = "criterion"
harness = false
required-features = ["bench"]

[[bench]]
name = "ntt"
harness = false
required-features = ["bench"]

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
serde = { version = "1.0.151", optional = true }
rand = { version = "0.8.5", optional = true }
rayon = "1.6.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# For benchmarking only
criterion = { version = "0.4.0", optional = true }
winter-math = { version = "0.4.2", optional = true, features = ["concurrent"] }
bytemuck = { version = "1.13.0", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
clap = { version = "4.0.32", features = ["derive"] }
proptest = "1.0.0"
goldilocks-merkle = { path = "./merkle" }
rust_crypto_k12 = { package = "k12", version = "0.2.1" }
xkcp_k12 = { package = "kangarootwelve_xkcp", version = "0.1.5" }
digest = "0.10.6"

[profile.release]
debug = true
# lto = true
# codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
