[workspace]
resolver = "2"
members = [
    "ntt",
    "pcs",
]

[workspace.package]
authors = ["Remco Bloemen <remco@wicked.ventures>"]
homepage = "https://github.com/recmo/goldilocks"
repository = "https://github.com/recmo/goldilocks"
description = "A library for fast NTTs and PCSs over the Goldilocks prime field"
keywords = ["ntt", "goldilocks", "prime", "field", "pcs"]
categories = ["mathematics"]
readme = "Readme.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
serde = "1.0.151"
rand = "0.8.5"
rayon = "1.6.1"
bytemuck = { version = "1.13.0", features = ["derive"] }

# Alternative K12 implementations
rust_crypto_k12 = { package = "k12", version = "0.2.1" }
xkcp_k12 = { package = "kangarootwelve_xkcp", version = "0.1.5"  }

# Dev/bench dependencies
criterion = "0.4.0"
proptest = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
debug = true
# lto = true
# codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
