[workspace]
resolver = "2"
members = [
    "bench",
    "ntt",
    "pcs",
]

[workspace.package]
authors = ["Remco Bloemen <remco@wicked.ventures>"]
homepage = "https://github.com/recmo/goldilocks"
repository = "https://github.com/recmo/goldilocks"
description = "A library for fast NTTs and PCSs over the Goldilocks prime field"
keywords = ["ntt", "goldilocks", "prime", "field", "pcs"]
categories = ["mathematics"]
readme = "Readme.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
serde = "1.0.151"
rand = "0.8.5"
rayon = "1.6.1"
bytemuck = { version = "1.13.0", features = ["derive", "min_const_generics"] }

# Alternative K12 implementations
rust_crypto_k12 = { package = "k12", version = "0.2.1" }
xkcp_k12 = { package = "kangarootwelve_xkcp", version = "0.1.5"  }

# GPU support
wgpu = "0.15.1"
futures-intrusive = "0.5.0"
pollster = "0.3.0"

# Dev/bench dependencies
criterion = "0.4.0"
proptest = "1.0.0"

[profile.release]
debug = true
# lto = true
# codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
