[package]
name = "goldilocks-merkle"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
homepage = "https://github.com/recmo/goldilocks-ntt"
repository = "https://github.com/recmo/goldilocks-ntt"
description = "A library for fast NTTs over the Goldilocks prime field"
keywords = ["ntt", "goldilocks", "prime", "field"]
categories = ["mathematics"]
readme = "Readme.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["xkcp"]
bench = ["dep:criterion", "rand", "dep:rust_crypto_k12", "dep:xkcp_k12"]
xkcp = ["dep:xkcp_k12"]

[[bench]]
name = "criterion"
harness = false
required-features = ["bench"]

[dependencies]
serde = { version = "1.0.151", optional = true }
rand = { version = "0.8.5", optional = true }
rayon = "1.6.1"

# For benchmarking only
criterion = { version = "0.4.0", optional = true }
winter-math = { version = "0.4.2", optional = true, features = ["concurrent"] }

rust_crypto_k12 = { package = "k12", version = "0.2.1", optional = true }
xkcp_k12 = { package = "kangarootwelve_xkcp", version = "0.1.5", optional = true }


[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
clap = { version = "4.0.32", features = ["derive"] }
proptest = "1.0.0"

[profile.release]
debug = true
# lto = true
# codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
