[package]
name = "goldilocks-ntt"
description = "A fast NTT implementation for the Goldilocks prime field"
readme = "Readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
gpu = ["dep:wgpu", "dep:futures-intrusive", "dep:pollster"]
bench = ["dep:criterion"]

[[bench]]
name = "criterion"
harness = false
required-features = ["bench"]

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
serde = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rayon.workspace = true
bytemuck.workspace = true

# For GPU support
wgpu = { workspace = true, optional = true }
futures-intrusive = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# For benchmarking only
criterion = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
proptest.workspace = true
